[gd_scene load_steps=20 format=2]

[ext_resource path="res://sprites/donut1.png" type="Texture" id=1]
[ext_resource path="res://sprites/donut0.png" type="Texture" id=2]
[ext_resource path="res://EnemyDonut.gd" type="Script" id=3]
[ext_resource path="res://sprites/donut2.png" type="Texture" id=4]
[ext_resource path="res://sprites/donut_laf0.png" type="Texture" id=5]
[ext_resource path="res://sprites/donut_laf1.png" type="Texture" id=6]
[ext_resource path="res://sprites/donut2_1.png" type="Texture" id=7]
[ext_resource path="res://sprites/donut2_2.png" type="Texture" id=8]
[ext_resource path="res://sprites/donut2_3.png" type="Texture" id=9]
[ext_resource path="res://sprites/donut2_laf1.png" type="Texture" id=10]
[ext_resource path="res://sprites/donut2_laf2.png" type="Texture" id=11]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "default0",
"speed": 7.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default1",
"speed": 7.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "laugh0",
"speed": 7.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "laugh1",
"speed": 7.0
} ]

[node name="EnemyDonut" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.346, 0.614 )
scale = Vector2( 1.05, 1.05 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "laugh1"

[node name="StunTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="WaitTimer" type="Timer" parent="."]

[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
